--- a/elearning-core/product_items.html
+++ b/elearning-core/product_items.html
@@ -1,5 +1,5 @@
 <div class="product-item" data-catalogid="[catalogid]" data-ajaxcart="1" data-addcart-callback="addcart_callback">
-	<div class="product-item-container">
+	<div class="product-item-container clearfix">
 		<div class="img">
 			<a href="product.asp?itemid=[catalogid]">
 				<img src="[THUMBNAIL]" alt="[name]" class="img-responsive" />
@@ -8,6 +8,8 @@
 			<button class="quickview" data-toggle="modal">[product_quick-view]</button>
 			<!--END: quickview-->
 		</div>
+		
+		<div class="product-content">
 
 		<div class="name">
 			<a href="product.asp?itemid=[catalogid]">[name]</a>
@@ -54,6 +56,8 @@
 			<!--START: freeshippingblock-->
 			<span class="freeshipping">[freeshipping]</span>
 			<!--END: freeshippingblock-->
+		</div>
+			
 		</div>
 
 	</div>
