theme updated for ada

--- a/elearning-core/home.html
+++ b/elearning-core/home.html
@@ -7,7 +7,7 @@
                     <div class="homeCarousel flexslider" data-animation="[hc_effect]" data-slideshowspeed="[hc_delay]">
                         <ul class="slides">
                             <!--START: carousel-->
-                            <li><a href="[link]"><img src="[image]" alt="" /></a></li>
+                            <li><a href="[link]"><img src="[image]" alt="carousel" /></a></li>
                             <!--END: carousel-->
                         </ul>
                     </div>
@@ -27,9 +27,9 @@
 
 	<!--START: FEATURE_MENU-->
     <section class="products-section">
-		<div class="container hidden">
+		<div class="container">
 			<div class="row">
-				<h2 class="header-specials"><span>[category_Header-specials]</span></h2>
+				<h1 class="header-specials"><span>[category_Header-specials]</span></h1>
 			</div>
 		</div>
 		<div class="container">
